# neovim-serenade

./: Cargo.toml  LICENSE  README.md  \  install.sh
.github/workflows/: main.yml
plugin/: neovim-serenade.vim
plugin-local/: neovim-serenade.vim
src/: main.rs  neovim.rs  serenade.rs
