[package]
name = "neovim-serenade"
version = "0.1.0"
authors = ["Matthew Camp <matt@mattsc.com>"]
edition = "2018"

[dependencies]
neovim-lib = "0.6.1"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
log = "0.4.0"
log4rs = "1.0.0"
websocket = "0.26.2"
